# docker-ml

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  train.py
docker/: build-cpu.sh  build-gpu.sh  build.sh  docker-compose.yml  run-cpu.sh  run-gpu.sh  run.sh
docker/cpu/: mlcpu.Dockerfile
docker/docker-cpu/: docker-compose.yml  mlcpu.Dockerfile
docker/docker-gpu-wip/: tensorboard.Dockerfile
docker/servers/: trainingclient.Dockerfile
docker/servers/trainingqueue/: README.md  database.sqlite  pyproject.toml  test.py
docker/servers/trainingqueue/frontend/: package-lock.json
docker/servers/trainingqueue/frontend/src/: index.js
docker/servers/trainingqueue/training_server/: client.py  job.py  main.py
ml/: __init__.py  tabular_dataset.py  tabular_model.py  trainer.py  utils.py
