[tool.poetry]
name = "docker-ml"
version = "0.1.0"
description = "Train machine learning model using docker"
authors = ["Sharad Shriyan <sharad30.ss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.3"
black = "^22.6.0"
isort = "^5.10.1"
commitizen = "^2.29.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
