[tool.poetry]
name = "training-server"
version = "0.1.0"
description = ""
authors = ["Soumendra Prasad Dhanee <soumendra@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
fastapi = "^0.79.0"
pydantic = "^1.9.1"
uvicorn = "^0.18.2"
sqlmodel = "^0.0.6"
SQLAlchemy = "^1.4.39"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
